force-app/main/default/objects/Chiffrage__c/Chiffrage__c.object-meta.xml
<CustomObject>
    <label>Chiffrage</label>
    <nameField>
        <label>Nom Chiffrage</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chiffrages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>