force-app/main/default/objects/Chiffrage__c/fields/CodeConventionnement__c.field-meta.xml
<CustomField>
    <fullName>CodeConventionnement__c</fullName>
    <label>Code conventionnement</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>