force-app/main/default/objects/Chiffrage__c/fields/CodeTVA__c.field-meta.xml
<CustomField>
    <fullName>CodeTVA__c</fullName>
    <label>Code TVA</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>