force-app/main/default/objects/Chiffrage__c/fields/DateChiffrage__c.field-meta.xml
<CustomField>
    <fullName>DateChiffrage__c</fullName>
    <label>Date du Chiffrage</label>
    <type>Date</type>
</CustomField>