force-app/main/default/objects/Chiffrage__c/fields/DateDebutValiditeTarif__c.field-meta.xml
<CustomField>
    <fullName>DateDebutValiditeTarif__c</fullName>
    <label>Date de début de validité du tarif</label>
    <type>Date</type>
</CustomField>