force-app/main/default/objects/Chiffrage__c/fields/Dossier__c.field-meta.xml
<CustomField>
    <fullName>Dossier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relation Chiffrage vers Dossier</description>
    <label>Dossier</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Chiffrages</relationshipLabel>
    <relationshipName>Chiffrages</relationshipName>
    <type>Lookup</type>
</CustomField>