force-app/main/default/objects/Chiffrage__c/fields/DT__c.field-meta.xml
<CustomField>
    <fullName>DT__c</fullName>
    <formula>HYPERLINK(&#39;/&#39;+ Owner:User.DT__c , Owner:User.DT__r.FirstName + &#39; &#39; +Owner:User.DT__r.LastName , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DT</label>
    <type>Text</type>
</CustomField>