force-app/main/default/objects/Chiffrage__c/fields/EtatChiffrage__c.field-meta.xml
<CustomField>
    <fullName>EtatChiffrage__c</fullName>
    <label>Etat du Chiffrage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En cours</fullName>
                <default>true</default>
                <label>En cours</label>
            </value>
            <value>
                <fullName>Exploitable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>