force-app/main/default/objects/Chiffrage__c/fields/Horodatage__c.field-meta.xml
<CustomField>
    <fullName>Horodatage__c</fullName>
    <label>Horodatage</label>
    <type>Date</type>
</CustomField>