force-app/main/default/objects/Chiffrage__c/fields/IndicateurExploitabilite__c.field-meta.xml
<CustomField>
    <fullName>IndicateurExploitabilite__c</fullName>
    <label>Indicateur exploitabilité</label>
    <length>255</length>
    <type>Text</type>
</CustomField>