force-app/main/default/objects/Chiffrage__c/fields/IndicateurReparationPropreCompte__c.field-meta.xml
<CustomField>
    <fullName>IndicateurReparationPropreCompte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indicateur réparation propre compte</label>
    <type>Checkbox</type>
</CustomField>