force-app/main/default/objects/Chiffrage__c/fields/IndicateurSelection__c.field-meta.xml
<CustomField>
    <fullName>IndicateurSelection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indicateur de sélection</label>
    <type>Checkbox</type>
</CustomField>