force-app/main/default/objects/Chiffrage__c/fields/IndicateurTVA__c.field-meta.xml
<CustomField>
    <fullName>IndicateurTVA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indicateur TVA</label>
    <type>Checkbox</type>
</CustomField>