force-app/main/default/objects/Chiffrage__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <label>Justification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>