force-app/main/default/objects/Chiffrage__c/fields/MontantACL__c.field-meta.xml
<CustomField>
    <fullName>MontantACL__c</fullName>
    <label>Montant ACL</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>