force-app/main/default/objects/Chiffrage__c/fields/MontantACLMOHT__c.field-meta.xml
<CustomField>
    <fullName>MontantACLMOHT__c</fullName>
    <description>Montant HT des remises sur main d&#39;œuvre
[MONT_ABAT_MO_HT]</description>
    <label>Montant HT d&#39;ACL sur MO</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>