force-app/main/default/objects/Chiffrage__c/fields/MontantACLPieceHT__c.field-meta.xml
<CustomField>
    <fullName>MontantACLPieceHT__c</fullName>
    <description>Montant HT des remises sur pièces
[MONT_ABAT_PIECE_HT]</description>
    <label>Montant HT d&#39;ACL sur pièce</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>