force-app/main/default/objects/Chiffrage__c/fields/MontantExpertiseHT__c.field-meta.xml
<CustomField>
    <fullName>MontantExpertiseHT__c</fullName>
    <label>Montant d&#39;expertise HT</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>