force-app/main/default/objects/Chiffrage__c/fields/MontantReparation__c.field-meta.xml
<CustomField>
    <fullName>MontantReparation__c</fullName>
    <label>Montant de la réparation</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>