force-app/main/default/objects/Chiffrage__c/fields/MontantReparations_TTC__c.field-meta.xml
<CustomField>
    <fullName>MontantReparations_TTC__c</fullName>
    <label>Montant des réparations TTC</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>