force-app/main/default/objects/Chiffrage__c/fields/MontantReparationsHT__c.field-meta.xml
<CustomField>
    <fullName>MontantReparationsHT__c</fullName>
    <label>Montant des réparations HT</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>