force-app/main/default/objects/Chiffrage__c/fields/MontantSGC__c.field-meta.xml
<CustomField>
    <fullName>MontantSGC__c</fullName>
    <label>Montant SGC</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>