force-app/main/default/objects/Chiffrage__c/fields/MontantTotalForfaitMO__c.field-meta.xml
<CustomField>
    <fullName>MontantTotalForfaitMO__c</fullName>
    <description>Montant total des forfaits
[MONT_MOF]</description>
    <label>Montant total des forfaits MO</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>