force-app/main/default/objects/Chiffrage__c/fields/MontantTotalHT__c.field-meta.xml
<CustomField>
    <fullName>MontantTotalHT__c</fullName>
    <label>Montant Total HT</label>
    <summarizedField>LigneChiffrage__c.PrixHT__c</summarizedField>
    <summaryForeignKey>LigneChiffrage__c.Chiffrage__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>