force-app/main/default/objects/Chiffrage__c/fields/MontantTotalIngredientPeinture__c.field-meta.xml
<CustomField>
    <fullName>MontantTotalIngredientPeinture__c</fullName>
    <description>Montant total des ingrédients peinture
[MONT_IP]</description>
    <label>Montant total des ingrédients</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>