force-app/main/default/objects/Chiffrage__c/fields/MontantTotalMO__c.field-meta.xml
<CustomField>
    <fullName>MontantTotalMO__c</fullName>
    <description>Montant total des mains d&#39;œuvre
[MONT_MO]</description>
    <label>Montant total de la MO</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>