force-app/main/default/objects/Chiffrage__c/fields/MontantTotalPiece__c.field-meta.xml
<CustomField>
    <fullName>MontantTotalPiece__c</fullName>
    <description>[MONT_PIECE_NORMAL]</description>
    <label>Montant total pièce</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>