force-app/main/default/objects/Chiffrage__c/fields/MontantTotalRemiseMO__c.field-meta.xml
<CustomField>
    <fullName>MontantTotalRemiseMO__c</fullName>
    <description>[MONT_RMO]</description>
    <label>Montant total des remises MO</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>