force-app/main/default/objects/Chiffrage__c/fields/MontantTotalRemisePiece__c.field-meta.xml
<CustomField>
    <fullName>MontantTotalRemisePiece__c</fullName>
    <description>[MONT_RPR]</description>
    <label>Montant total des remises pièce</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>