force-app/main/default/objects/Chiffrage__c/fields/MontantTotalRemiseTotal__c.field-meta.xml
<CustomField>
    <fullName>MontantTotalRemiseTotal__c</fullName>
    <description>[MONT_RTA]</description>
    <label>Montant total des remises sur total</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>