force-app/main/default/objects/Chiffrage__c/fields/MontantTotalTVA__c.field-meta.xml
<CustomField>
    <fullName>MontantTotalTVA__c</fullName>
    <description>Montant total de la TVA
[MONT_TVA]</description>
    <label>Montant TVA</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>