force-app/main/default/objects/Chiffrage__c/fields/MontantTVAACLMO__c.field-meta.xml
<CustomField>
    <fullName>MontantTVAACLMO__c</fullName>
    <description>Montant TVA sur les usures
[MONT_TVA_ABAT_MO]</description>
    <label>Montant de la TVA d&#39;ACL sur la MO</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>