force-app/main/default/objects/Chiffrage__c/fields/MontantTVAACLPiece__c.field-meta.xml
<CustomField>
    <fullName>MontantTVAACLPiece__c</fullName>
    <description>Montant TVA des remises sur pièces
[MONT_TVA_ABAT_PIECE]</description>
    <label>Montant de la TVA d&#39;ACL sur les pièces</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>