force-app/main/default/objects/Chiffrage__c/fields/MontantTVAMO__c.field-meta.xml
<CustomField>
    <fullName>MontantTVAMO__c</fullName>
    <description>Montant TVA sur la main d&#39;œuvre
[MONT_TVA_REP_MO]</description>
    <label>Montant de la TVA sur MO</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>