force-app/main/default/objects/Chiffrage__c/fields/MontantTVAPIECE__c.field-meta.xml
<CustomField>
    <fullName>MontantTVAPIECE__c</fullName>
    <description>Montant TVA sur les pièces
[MONT_TVA_REP_PIECE]</description>
    <label>Montant de la TVA sur pièces</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>