force-app/main/default/objects/Chiffrage__c/fields/MUE__c.field-meta.xml
<CustomField>
    <fullName>MUE__c</fullName>
    <formula>HYPERLINK(&#39;/&#39;+  Owner:User.MUE__c ,  Owner:User.MUE__r.FirstName + &#39; &#39; +Owner:User.MUE__r.LastName , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MUE</label>
    <type>Text</type>
</CustomField>