force-app/main/default/objects/Chiffrage__c/fields/NumeroChiffrage__c.field-meta.xml
<CustomField>
    <fullName>NumeroChiffrage__c</fullName>
    <label>Numéro de chiffrage</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>