force-app/main/default/objects/Chiffrage__c/fields/PourcentageRemise__c.field-meta.xml
<CustomField>
    <fullName>PourcentageRemise__c</fullName>
    <description>[TXREM]</description>
    <label>Pourcentage de remise</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>