force-app/main/default/objects/Chiffrage__c/fields/Reparateur__c.field-meta.xml
<CustomField>
    <fullName>Reparateur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Code intervenant du réparateur 
[COD_INTERV_REP]</description>
    <label>Réparateur</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.EstUnReparateur__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Account.EstUnReparateurDePassage__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Chiffrages</relationshipLabel>
    <relationshipName>Chiffrages</relationshipName>
    <type>Lookup</type>
</CustomField>