force-app/main/default/objects/Chiffrage__c/fields/StatutApprobation__c.field-meta.xml
<CustomField>
    <fullName>StatutApprobation__c</fullName>
    <label>Statut d’Approbation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En attente</fullName>
            </value>
            <value>
                <fullName>Validé</fullName>
            </value>
            <value>
                <fullName>En cours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>