force-app/main/default/objects/Chiffrage__c/fields/Tarif_T3__c.field-meta.xml
<CustomField>
    <fullName>Tarif_T3__c</fullName>
    <description>[TART3]</description>
    <label>Tarif T3</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>