force-app/main/default/objects/Chiffrage__c/fields/TarifI3__c.field-meta.xml
<CustomField>
    <fullName>TarifI3__c</fullName>
    <description>[TARI3]</description>
    <label>Tarif I3</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>