force-app/main/default/objects/Chiffrage__c/fields/TarifT1__c.field-meta.xml
<CustomField>
    <fullName>TarifT1__c</fullName>
    <description>[TART1]</description>
    <label>Tarif T1</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>