force-app/main/default/objects/Chiffrage__c/fields/TarifT2__c.field-meta.xml
<CustomField>
    <fullName>TarifT2__c</fullName>
    <description>[TART2]</description>
    <label>Tarif T2</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>