force-app/main/default/objects/Chiffrage__c/fields/TarifTP__c.field-meta.xml
<CustomField>
    <fullName>TarifTP__c</fullName>
    <description>[TARTP]</description>
    <label>Tarif TP</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>