force-app/main/default/objects/Chiffrage__c/fields/TotalForfait__c.field-meta.xml
<CustomField>
    <fullName>TotalForfait__c</fullName>
    <label>Total Forfait</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>