force-app/main/default/objects/Chiffrage__c/fields/TotalIngredientPeinture__c.field-meta.xml
<CustomField>
    <fullName>TotalIngredientPeinture__c</fullName>
    <label>Total Ingrédient Peinture</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>