force-app/main/default/objects/Chiffrage__c/fields/TotalMainOeuvre__c.field-meta.xml
<CustomField>
    <fullName>TotalMainOeuvre__c</fullName>
    <label>Total Main d&#39;Oeuvre</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>