force-app/main/default/objects/Chiffrage__c/fields/TotalNonRemise__c.field-meta.xml
<CustomField>
    <fullName>TotalNonRemise__c</fullName>
    <label>Total non remisé</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>