force-app/main/default/objects/Chiffrage__c/fields/TotalPiece__c.field-meta.xml
<CustomField>
    <fullName>TotalPiece__c</fullName>
    <label>Total Pièce</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>