force-app/main/default/objects/Chiffrage__c/fields/TotalPriseChargePeinture__c.field-meta.xml
<CustomField>
    <fullName>TotalPriseChargePeinture__c</fullName>
    <label>Total Prise En Charge peinture</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>