force-app/main/default/objects/Chiffrage__c/fields/TotalRemiseDeduite__c.field-meta.xml
<CustomField>
    <fullName>TotalRemiseDeduite__c</fullName>
    <label>Total remise déduite</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>