force-app/main/default/objects/Chiffrage__c/fields/TotalT1__c.field-meta.xml
<CustomField>
    <fullName>TotalT1__c</fullName>
    <description>T1 DCC + T1 R</description>
    <label>Total T1 (T1 DCC + T1 R)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>