force-app/main/default/objects/Chiffrage__c/fields/TotalT1DCC__c.field-meta.xml
<CustomField>
    <fullName>TotalT1DCC__c</fullName>
    <label>Total T1 DCC</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>