force-app/main/default/objects/Chiffrage__c/fields/TotalT2__c.field-meta.xml
<CustomField>
    <fullName>TotalT2__c</fullName>
    <description>T2 DCC + T2 R</description>
    <label>Total T2 (T2 DCC + T2 R)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>