force-app/main/default/objects/Chiffrage__c/fields/TotalT3__c.field-meta.xml
<CustomField>
    <fullName>TotalT3__c</fullName>
    <label>Total T3 (T3 DCC + T3 R)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>