force-app/main/default/objects/Chiffrage__c/fields/TotalT3DCC__c.field-meta.xml
<CustomField>
    <fullName>TotalT3DCC__c</fullName>
    <label>Total T3 DCC</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>