force-app/main/default/objects/Chiffrage__c/fields/TotalTP__c.field-meta.xml
<CustomField>
    <fullName>TotalTP__c</fullName>
    <label>Total TP</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>