force-app/main/default/objects/Chiffrage__c/fields/TotalTPTPPlusPriseChargePeinture__c.field-meta.xml
<CustomField>
    <fullName>TotalTPTPPlusPriseChargePeinture__c</fullName>
    <description>Total TP (TP + Prise En Charge peinture)</description>
    <label>Total TP (TP + Prise En Charge peinture)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>