force-app/main/default/objects/Chiffrage__c/fields/TypeIngredient__c.field-meta.xml
<CustomField>
    <fullName>TypeIngredient__c</fullName>
    <label>Type ingrédient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>