force-app/main/default/objects/Chiffrage__c/fields/TypeRemise__c.field-meta.xml
<CustomField>
    <fullName>TypeRemise__c</fullName>
    <description>[TYREM]</description>
    <label>Type de remise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1. Remise pièces</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2. Remise MO</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3. Remise sur total</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>