force-app/main/default/objects/Chiffrage__c/fields/Vehicule__c.field-meta.xml
<CustomField>
    <fullName>Vehicule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Véhicule faisant l&#39;obiet du chiffrage.</description>
    <label>Véhicule</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Chiffrages</relationshipLabel>
    <relationshipName>Chiffrage</relationshipName>
    <type>Lookup</type>
</CustomField>